--- a/project001/style.css
+++ b/project001/style.css
@@ -115,9 +115,10 @@ form .button-area {
   padding: 13px 25px;
 }
 
-.button-area {
+.button-area span {
   color: #0d6efd;
   margin-left: 30px;
+  display: none;
 }
 
 @media (max-width: 600px) {
